# mylobsterpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: ci.yml
cmake/: Dependencies.cmake  mylobsterConfig.cmake.in
docs/: README.md  channels.md  configuration.md  cron.md  delivery-queue.md  providers.md  routing.md  security.md  sessions.md
include/openclaw/: export.hpp
include/openclaw/agent/: runtime.hpp  thinking.hpp  tool.hpp  tool_registry.hpp
include/openclaw/browser/: browser_action.hpp  browser_pool.hpp  cdp_client.hpp  snapshot.hpp
include/openclaw/channels/: auth_policy.hpp  channel.hpp  delivered_channel.hpp  discord.hpp  line.hpp  message.hpp  registry.hpp  signal.hpp  slack.hpp  telegram.hpp  typing_guard.hpp  whatsapp.hpp
include/openclaw/cli/: app.hpp  commands.hpp
include/openclaw/core/: config.hpp  error.hpp  logger.hpp  secrets.hpp  types.hpp  utils.hpp
include/openclaw/cron/: parser.hpp  scheduler.hpp
include/openclaw/gateway/: agent_handler.hpp  auth.hpp  browser_handler.hpp  channel_handler.hpp  chat_handler.hpp  client.hpp  config_handler.hpp  cron_handler.hpp  flood_guard.hpp  frame.hpp  gateway_handler.hpp  hooks.hpp  memory_handler.hpp  plugin_handler.hpp  protocol.hpp  provider_handler.hpp  server.hpp  session_handler.hpp  talk_config.hpp  tool_handler.hpp  tool_policy.hpp  tools_catalog.hpp
include/openclaw/infra/: delivery_queue.hpp  device.hpp  dotenv.hpp  exec_safety.hpp  exec_trust.hpp  fetch_guard.hpp  heartbeat.hpp  http_client.hpp  jwt.hpp  outbound_channel.hpp  path_alias_guards.hpp  paths.hpp  ports.hpp  sandbox_network.hpp  sandbox_paths.hpp  security_audit.hpp
include/openclaw/memory/: embeddings.hpp  manager.hpp  search.hpp  sqlite_vec.hpp  vector_store.hpp
include/openclaw/plugins/: loader.hpp  plugin.hpp  sdk.hpp
include/openclaw/providers/: anthropic.hpp  bedrock.hpp  gemini.hpp  huggingface.hpp  kilocode.hpp  mistral.hpp  ollama.hpp  openai.hpp  provider.hpp  synthetic.hpp  volcengine.hpp
include/openclaw/routing/: router.hpp  rules.hpp  turn_source.hpp
include/openclaw/sessions/: manager.hpp  session.hpp  store.hpp
src/: main.cpp
src/agent/: runtime.cpp  thinking.cpp  tool.cpp  tool_registry.cpp
src/browser/: browser_action.cpp  browser_pool.cpp  cdp_client.cpp  snapshot.cpp
src/channels/: channel.cpp  delivered_channel.cpp  discord.cpp  line.cpp  registry.cpp  signal.cpp  slack.cpp  telegram.cpp  typing_guard.cpp  whatsapp.cpp
src/cli/: app.cpp  commands.cpp
src/core/: config.cpp  error.cpp  logger.cpp  secrets.cpp  types.cpp  utils.cpp
src/cron/: parser.cpp  scheduler.cpp
src/gateway/: agent_handler.cpp  auth.cpp  browser_handler.cpp  channel_handler.cpp  chat_handler.cpp  client.cpp  config_handler.cpp  cron_handler.cpp  frame.cpp  gateway_handler.cpp  hooks.cpp  memory_handler.cpp  plugin_handler.cpp  protocol.cpp  provider_handler.cpp  server.cpp  session_handler.cpp  talk_config.cpp  tool_handler.cpp  tool_policy.cpp  tools_catalog.cpp
src/infra/: delivery_queue.cpp  device.cpp  dotenv.cpp  exec_safety.cpp  exec_trust.cpp  fetch_guard.cpp  heartbeat.cpp  http_client.cpp  jwt.cpp  outbound_channel.cpp  path_alias_guards.cpp  paths.cpp  ports.cpp  sandbox_network.cpp  sandbox_paths.cpp  security_audit.cpp
src/memory/: embeddings.cpp  manager.cpp  search.cpp  sqlite_vec.cpp
src/plugins/: loader.cpp  sdk.cpp
src/providers/: anthropic.cpp  bedrock.cpp  gemini.cpp  huggingface.cpp  kilocode.cpp  mistral.cpp  ollama.cpp  openai.cpp  synthetic.cpp  volcengine.cpp
src/routing/: router.cpp  rules.cpp  turn_source.cpp
src/sessions/: manager.cpp  session.cpp  store.cpp
tests/: CMakeLists.txt
tests/agent/: test_stop_phrases.cpp  test_tool_registry.cpp
tests/channels/: test_discord_system_auth.cpp  test_discord_voice.cpp  test_message.cpp  test_registry.cpp  test_slack_system_auth.cpp  test_telegram_dm_auth.cpp  test_telegram_voice.cpp  test_whatsapp_reasoning.cpp
tests/cli/: test_config_redaction.cpp
tests/core/: test_config.cpp  test_config_env_refs.cpp  test_error.cpp  test_secrets.cpp  test_utils.cpp
tests/cron/: test_abort.cpp  test_delete_after_run.cpp  test_job_id_sanitize.cpp  test_list_paging.cpp  test_manual_run.cpp  test_parser.cpp  test_stagger.cpp
tests/gateway/: test_auth.cpp  test_avatar_security.cpp  test_connect_handshake.cpp  test_flood_guard.cpp  test_frame.cpp  test_openclaw_parity.cpp  test_plugin_route_auth.cpp  test_protocol.cpp  test_talk_config.cpp  test_tool_policy.cpp  test_tools_catalog.cpp
tests/infra/: test_content_sanitizer.cpp  test_delivery_queue.cpp  test_device_auth.cpp  test_dotenv.cpp  test_exec_safety.cpp  test_exec_trust.cpp  test_fetch_guard.cpp  test_heartbeat.cpp  test_jwt.cpp  test_path_alias_guards.cpp  test_paths.cpp  test_sandbox_network.cpp  test_sandbox_paths.cpp  test_security_audit.cpp
tests/memory/: test_embeddings.cpp  test_search.cpp  test_stopwords.cpp
tests/providers/: test_anthropic.cpp  test_gemini.cpp  test_huggingface.cpp  test_kilocode.cpp  test_mistral.cpp  test_ollama.cpp  test_openai.cpp  test_provider.cpp  test_synthetic.cpp  test_volcengine.cpp
tests/routing/: test_router.cpp  test_scope_rules.cpp  test_turn_source.cpp
tests/sessions/: test_redaction.cpp  test_session.cpp  test_session_fork.cpp  test_store.cpp
